@@ -1,3 +1,8 @@
+2006-02-06  Federico Mena Quintero  <federico@ximian.com>
+
+	* src/shares.c (net_usershare_run): Oops, fix a printf format.
+	Fixes https://bugzilla.novell.com/show_bug.cgi?id=147065
+
 2006-01-26  Federico Mena Quintero  <federico@ximian.com>
 
 	* src/shares.c (net_usershare_run): Oops, don't propagate an error
